@@ -49,7 +49,7 @@
     <delete dir="${dist}"/>
   </target>
 	
-	
+	<!--
 	<target name="test">
 		
 		<path id="test.classpath">
@@ -67,5 +67,43 @@
 	    <formatter type="plain" usefile="false" />
 	    <classpath refid="test.classpath" />
 	  </junit>
-	</target>	
+	</target>
+	-->
+	<target name="ykTest">		
+		<antcall target="testng">		
+			<param name="projecttest.suite.location" value="suites/"/>
+			<param name="projecttest.suite" value="testng.xml"/>
+			<param name="projecttest.infra" value="true"/>
+		</antcall>
+	</target>
+	
+	<target name="testng" depends="compile" description="Run the tests">
+			<taskdef resource="testngtasks" classpath="${lib}/testng-6.8.jar"/>
+			<testng outputdir="${build}/test-report">	
+		
+				<!--
+				<testng outputdir="${basedir}/test-report">
+				-->
+				<jvmarg value="-Dsun.lang.ClassLoader.allowArraySyntax=true"/>
+				<jvmarg value="-Xms256m"/>
+				<jvmarg value="-Xmx1024m"/>
+				<jvmarg value="-XX:MaxPermSize=512m"/>
+				<jvmarg value="-Dfile.encoding=UTF-8"/>
+				<!--
+				<jvmarg value="-Demma.coverage.out.file=${emma.metadata.dir}/coverage.emma"/>
+				-->
+				<xmlfileset dir="../${projecttest.suite.location}/" includes="${projecttest.suite}"/>
+				<classpath>
+				    <path refid="build.classpath.test" />
+				   <!--
+				    <path refid="emma.lib" />
+					<pathelement location="../${projectweb.name}/WebContent/" />
+					<pathelement location="../${projectworker.name}/WebContent/" />
+					<pathelement path="${core.dir}" />
+					<pathelement path="${test.dir}" />
+					-->
+				</classpath>
+			</testng>
+		</target>
+	
 </project>
